    EOFException (Xiao Chen via Colin P. McCabe)

    HDFS-9484. NNThroughputBenchmark$BlockReportStats should not send empty
    block reports. (Mingliang Liu via shv)

    HDFS-9430. Remove waitForLoadingFSImage since checkNNStartup has ensured
    image loaded and namenode started. (Brahma Reddy Battula via mingma)

    HDFS-9198. Coalesce IBR processing in the NN. (Daryn Sharp via umamahesh)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-9569. Log the name of the fsimage being loaded for better
    supportability (Yongjun Zhang via kihwal)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-9289. Make DataStreamer#block thread safe and verify genStamp in
    commitBlock. (Chang Li via zhz)

    HDFS-4937. ReplicationMonitor can infinite-loop in 
    BlockPlacementPolicyDefault#chooseRandom(). (kihwal)

    HDFS-9383. TestByteArrayManager#testByteArrayManager fails.
    (szetszwo via kihwal)

    HDFS-9516. Truncate file fails with data dirs on multiple disks.
    (Plamen Jeliazkov via shv)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8659. Block scanner INFO message is spamming logs. (Yongjun Zhang)

    HADOOP-5323. Trash documentation should describe its directory structure and
    configurations. (Weiwei Yang via ozawa)

    HDFS-8099. Change "DFSInputStream has been closed already" message to
    debug log level (Charles Lamb via Colin P. McCabe)

    HDFS-9221. HdfsServerConstants#ReplicaState#getState should avoid calling
    values() since it creates a temporary array. (Staffan Friberg via yliu)

  OPTIMIZATIONS

    HDFS-8722. Optimize datanode writes for small writes and flushes (kihwal)

  BUG FIXES

    HDFS-6945. BlockManager should remove a block from excessReplicateMap and
    decrement ExcessBlocks metric when the block is removed. (aajisaka)

    HDFS-8806. Inconsistent metrics: number of missing blocks with replication